[gd_scene load_steps=12 format=3 uid="uid://d2vuoitb3v0qd"]

[ext_resource type="PackedScene" uid="uid://jbyv8t20osmu" path="res://inventory/gen_shop.tscn" id="1_5jmxq"]
[ext_resource type="Script" path="res://inventory/hunter_shop_ui2.gd" id="2_nkwmj"]
[ext_resource type="Texture2D" uid="uid://doi3myltp0tqj" path="res://Sprites/HunterShopUI.png" id="3_ulilm"]
[ext_resource type="FontFile" uid="uid://cpojoq47dln4s" path="res://Fonts/PixelOperator.ttf" id="4_2wlh1"]
[ext_resource type="Theme" uid="uid://75yorankngkb" path="res://red_button.tres" id="5_w5u66"]
[ext_resource type="Texture2D" uid="uid://bri0365pivtbf" path="res://Sprites/TrapIcon.png" id="6_qenvn"]
[ext_resource type="Theme" uid="uid://dsmecbmxtrduq" path="res://anvil_button.tres" id="7_lbad8"]
[ext_resource type="Texture2D" uid="uid://kw5sgon0rx2m" path="res://Sprites/RabbitStewIcon.png" id="8_vgv26"]
[ext_resource type="Texture2D" uid="uid://c57dl8l6jcvuc" path="res://Sprites/RabbitStewWithMushroomIcon.png" id="9_rnwuw"]
[ext_resource type="Texture2D" uid="uid://nmfgafxv8cl4" path="res://Sprites/CoinIcon.png" id="9_s0xcm"]
[ext_resource type="Texture2D" uid="uid://bs44m3y8l2b0l" path="res://Sprites/InvSlot.png" id="11_73hey"]

[node name="HunterShopUI" instance=ExtResource("1_5jmxq")]
offset_left = 424.0
offset_top = 183.0
offset_right = -425.0
offset_bottom = -231.0
script = ExtResource("2_nkwmj")

[node name="NinePatchRect" parent="." index="0"]
offset_right = 296.0
offset_bottom = 245.0
texture = ExtResource("3_ulilm")

[node name="GridContainer" parent="NinePatchRect" index="1"]
offset_left = 84.0
offset_top = 92.0
offset_right = 212.0
offset_bottom = 153.0

[node name="TrapName" type="Label" parent="NinePatchRect/GridContainer" index="0"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_2wlh1")
theme_override_font_sizes/font_size = 8
text = "Trap   "

[node name="StewName" type="Label" parent="NinePatchRect/GridContainer" index="1"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_2wlh1")
theme_override_font_sizes/font_size = 8
text = "Recipe"

[node name="StewName2" type="Label" parent="NinePatchRect/GridContainer" index="2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_2wlh1")
theme_override_font_sizes/font_size = 8
text = "Recipe"

[node name="Trap" type="Button" parent="NinePatchRect/GridContainer" index="3"]
layout_mode = 2
theme = ExtResource("5_w5u66")
icon = ExtResource("6_qenvn")
icon_alignment = 1

[node name="Stew" type="Button" parent="NinePatchRect/GridContainer" index="4"]
layout_mode = 2
theme = ExtResource("7_lbad8")
icon = ExtResource("8_vgv26")
icon_alignment = 1

[node name="Stew2" type="Button" parent="NinePatchRect/GridContainer" index="5"]
layout_mode = 2
theme = ExtResource("7_lbad8")
icon = ExtResource("9_rnwuw")
icon_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/GridContainer" index="6"]
layout_mode = 2

[node name="CoinIcon" type="Sprite2D" parent="NinePatchRect/GridContainer/VBoxContainer" index="0"]
position = Vector2(7, 4)
scale = Vector2(0.7, 0.7)
texture = ExtResource("9_s0xcm")

[node name="TrapLabel" type="Label" parent="NinePatchRect/GridContainer/VBoxContainer" index="1"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_2wlh1")
theme_override_font_sizes/font_size = 8
text = "   000"

[node name="VBoxContainer2" type="VBoxContainer" parent="NinePatchRect/GridContainer" index="7"]
layout_mode = 2

[node name="CoinIcon2" type="Sprite2D" parent="NinePatchRect/GridContainer/VBoxContainer2" index="0"]
position = Vector2(7, 4)
scale = Vector2(0.7, 0.7)
texture = ExtResource("9_s0xcm")

[node name="StewLabel" type="Label" parent="NinePatchRect/GridContainer/VBoxContainer2" index="1"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_2wlh1")
theme_override_font_sizes/font_size = 8
text = "   000"

[node name="VBoxContainer3" type="VBoxContainer" parent="NinePatchRect/GridContainer" index="8"]
layout_mode = 2

[node name="CoinIcon3" type="Sprite2D" parent="NinePatchRect/GridContainer/VBoxContainer3" index="0"]
position = Vector2(7, 4)
scale = Vector2(0.7, 0.7)
texture = ExtResource("9_s0xcm")

[node name="StewLabel2" type="Label" parent="NinePatchRect/GridContainer/VBoxContainer3" index="1"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_2wlh1")
theme_override_font_sizes/font_size = 8
text = "   000"

[node name="Button2" type="Button" parent="." index="1"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 28.0
offset_top = -2.0
offset_right = 274.0
offset_bottom = 246.0

[node name="Inv_UI_Slot" parent="." index="2"]
visible = false
offset_left = 132.0
offset_top = 106.0
offset_right = 164.0
offset_bottom = 138.0
slot_sprite = ExtResource("11_73hey")

[node name="NoCoinLabel" parent="." index="3"]
offset_left = 93.0
offset_top = 77.0
offset_right = 261.0
offset_bottom = 100.0

[node name="OwnedLabel" parent="." index="4"]
offset_left = 85.0
offset_top = 77.0
offset_right = 204.0
offset_bottom = 100.0

[connection signal="pressed" from="NinePatchRect/GridContainer/Trap" to="." method="_on_trap_pressed"]
[connection signal="pressed" from="NinePatchRect/GridContainer/Stew" to="." method="_on_stew_pressed"]
[connection signal="pressed" from="NinePatchRect/GridContainer/Stew2" to="." method="_on_stew_2_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="send_favorite" from="Inv_UI_Slot" to="." method="_on_inv_ui_slot_send_favorite"]
